Fix seed search being cut off

--- a/app/assets/stylesheets/dropdowns.scss
+++ b/app/assets/stylesheets/dropdowns.scss
@@ -3,7 +3,6 @@
   @include flex-grow(1);
   position: relative;
   vertical-align: top;
-  overflow: hidden;
 }
 
 .dropdown-trigger {
